// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpNavButtons Renders with back route only 1`] = `
<div
  className="HelpNavButtons-container"
>
  <Button
    className="HelpNavButtons-backward"
    ghost={false}
    loading={false}
    prefixCls="ant-btn"
    type="primary"
  >
    <Component
      to="/testback"
    >
      <Icon>
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f053",
                "M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z",
              ],
              "iconName": "chevron-left",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      </Icon>
      <span
        className="HelpNavButtons-backward-text"
      >
        Backward
      </span>
    </Component>
  </Button>
</div>
`;

exports[`HelpNavButtons Renders with both forward and back route 1`] = `
<div
  className="HelpNavButtons-container"
>
  <Button
    className="HelpNavButtons-backward"
    ghost={false}
    loading={false}
    prefixCls="ant-btn"
    type="primary"
  >
    <Component
      to="/testback"
    >
      <Icon>
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f053",
                "M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z",
              ],
              "iconName": "chevron-left",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      </Icon>
      <span
        className="HelpNavButtons-backward-text"
      >
        Backward
      </span>
    </Component>
  </Button>
  <Button
    className="HelpNavButtons-forward"
    ghost={false}
    loading={false}
    prefixCls="ant-btn"
    type="primary"
  >
    <Component
      to="/testforward"
    >
      <span
        className="HelpNavButtons-forward-text"
      >
        Forward
      </span>
      <Icon>
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f054",
                "M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z",
              ],
              "iconName": "chevron-right",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      </Icon>
    </Component>
  </Button>
</div>
`;

exports[`HelpNavButtons Renders with forward route only 1`] = `
<div
  className="HelpNavButtons-container"
>
  <Button
    className="HelpNavButtons-forward"
    ghost={false}
    loading={false}
    prefixCls="ant-btn"
    type="primary"
  >
    <Component
      to="/testforward"
    >
      <span
        className="HelpNavButtons-forward-text"
      >
        Forward
      </span>
      <Icon>
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f054",
                "M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z",
              ],
              "iconName": "chevron-right",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      </Icon>
    </Component>
  </Button>
</div>
`;
